added more better examples

--- a/content/sql/03-data-type.mdx
+++ b/content/sql/03-data-type.mdx
@@ -22,7 +22,7 @@ SQL supports a wide range of data types that can be broadly categorized into the
 
 Let's explore each of these data types in more detail.
 
-### Numeric Data Types
+## Numeric Data Types
 
 - **INT**: Used to store whole numbers (integers) within a specific range.
 
@@ -105,7 +105,7 @@ VALUES
   (1, 123.45);
 ```
 
-### String Data types
+## String Data types
 
 - **CHAR**: Used to store fixed-length character strings.
 
@@ -177,7 +177,7 @@ VALUES
   (1, '123 Main Street, City, Country');
 ```
 
-### Date/Time Data types
+## Date/Time Data types
 
 - **DATE**: Used to store date values in the format **YYYY-MM-DD**.
 
@@ -248,7 +248,7 @@ VALUES
   (1, '2022-10-15 14:30:00');
 ```
 
-### Special Data types
+## Special Data types
 - **BLOB**: Used to store binary large objects such as images and multimedia files.
 
 ```sql
