added new module on operators-in-sql

--- a/content/sql/03-data-type.mdx
+++ b/content/sql/03-data-type.mdx
@@ -311,3 +311,7 @@ VALUES
     '<product><name>Product 1</name><price>19.99</price></product>'
   );
 ```
+
+For more about SQL data types, you can refer to the official documentation of the database management system you are using.
+
+[List of SQL Data Types](https://dev.mysql.com/doc/refman/8.0/en/data-types.html)
